[package]
name = "eso-addons"
version = "0.3.0"
authors = ["Damian Czaja <trojan295@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eso-addons"
path = "src/main.rs"

[lib]

[dependencies]
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
clap = { version = "3.2.2", features = ["derive", "cargo"] }
dirs = "4.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
zip = "0.6"
scraper = "0.15.0"
tempfile = "3.1"
requestty = "0.3"
colored = "2"
prettytable-rs = "^0.9"
walkdir = "2"
